# poetry2rye

./: LICENSE  README.md  pyproject.toml
.github/workflows/: qa.yml
src/poetry2rye/: convert.py  error.py  main.py  project.py  utils.py
tests/: conftest.py  test_backup.py  test_migrate.py
tests/test-dirs/mig-p0/: pyproject.toml
tests/test-dirs/mig-p1/: pyproject.toml
tests/test-dirs/mig-p2/: pyproject.toml
tests/test-dirs/mig-p3/: pyproject.toml
tests/test-dirs/p0/: pyproject.toml
tests/test-dirs/p1/: README.md  pyproject.toml
tests/test-dirs/p2/: pyproject.toml
tests/test-dirs/p2/p2/: main.py
tests/test-dirs/p3/: README.md  pyproject.toml
