[project]
name = "p0"
version = "0.1.0"
description = ""
authors = [{name = "nahco314",email = "nahco3_ta@yahoo.co.jp"}]
readme = "README.md"
dependencies = []
requires-python = ">=3.12,<4.0"


[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/p0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
