[project]
name = "p1"
version = "0.1.0"
description = ""
authors = [{name = "nahco314",email = "nahco3_ta@yahoo.co.jp"}]
readme = "README.md"
dependencies = ["numpy>=2.0.0,<3.0.0", "sortedcontainers==2.4.0", "pyproject-parser @ git+https://github.com/repo-helper/pyproject-parser"]
requires-python = ">=3.12,<4.0"


[tool.rye]
managed = true
dev-dependencies = ["typing-extensions>=4.12.2,<5.0.0"]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/p1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
