[project]
name = "p2"
version = "0.1.0"
description = ""
authors = [{name = "Your Name",email = "you@example.com"}]
readme = "README.md"
dependencies = []
requires-python = ">=3.12,<4.0"

[project.scripts]
p2 = "p2.main:main"


[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/p2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
